Agregado de archivos de información de producto y más
Agregado un html por cada producto que se encuentra en el sitio. Finalizado producto.html. En cada archivo fueron reemplazados los enlaces a login.html y signup.html por cuenta.html. Agregados error.html y correoEnviado.html. Se agregaron imágenes de los productos en mayor resolución.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="productos.html">Productos</a>
                 <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="contacto.html">Contacto</a>
                 <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="nosotros.html">Nosotros</a>
-                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="login.html">Login</a>
-                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="signup.html">Sign Up</a>
+                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="cuenta.html">Cuenta</a>
             </nav>
         </header>
         <div class="flex flex-col justify-center items-center size-full bg-[#00000060]">
@@ -80,19 +79,19 @@
                 <img class="w-[90%] mx-auto" src="img/campera1.webp" alt="campera kevenly eleven">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
                 <p class="text-center text-xl py-4">$150.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="camperaKevenlyEleven.html">Ver producto</a>
             </article>
             <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/campera2.webp" alt="campera kevenly rumble">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Rumble</h3>
                 <p class="text-center text-xl py-4">$190.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="camperaKevenlyRumble.html">Ver producto</a>
             </article>
             <article class="bg-indigo-50 w-[90%] hidden sm:w-[45%] md:w-[30%] md:max-w-100 md:block shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/campera3.webp" alt="campera kevenly chill">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Chill</h3>
                 <p class="text-center text-xl py-4">$90.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="camperaKevenlyChill.html">Ver producto</a>
             </article>
         </div>
         <a class="inline-block w-90 md:w-110 p-3 text-center bg-black text-white mt-7" href="productos.html">Ver más productos</a>
@@ -112,19 +111,19 @@
                 <img class="w-[90%] mx-auto" src="img/carpeta-oficio.webp" alt="carpetas de oficio">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Carpetas Oficio</h3>
                 <p class="text-center text-xl py-4">$21.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="carpetasOficio.html">Ver producto</a>
             </article>
             <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/fichero-020.webp" alt="fichero 020">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Fichero 020</h3>
                 <p class="text-center text-xl py-4">$19.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="fichero020.html">Ver producto</a>
             </article>
             <article class="bg-indigo-50 w-[90%] hidden sm:w-[45%] md:w-[30%] md:max-w-100 md:block shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/tarjetero.webp" alt="">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Tarjetero Plegable</h3>
                 <p class="text-center text-xl py-4">$12.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="tarjeteroPlegable.html">Ver producto</a>
             </article>
         </div>
         <a class="inline-block w-90 md:w-110 p-3 text-center bg-black text-white mt-7" href="productos.html">Ver más productos</a>
@@ -144,19 +143,19 @@
                 <img class="w-[90%] mx-auto" src="img/bandolera-ines.webp" alt="bandolera ines">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Bandolera Ines</h3>
                 <p class="text-center text-xl py-4">$50.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="bandoleraInes.html">Ver producto</a>
             </article>
             <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/mochila-monster.webp" alt="mochila monster">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Mochila Monster</h3>
                 <p class="text-center text-xl py-4">$55.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="mochilaMonster.html">Ver producto</a>
             </article>
             <article class="bg-indigo-50 w-[90%] hidden sm:w-[45%] md:w-[30%] md:max-w-100 md:block shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/mochila-agata.webp" alt="mochila agata">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Mochila Agata</h3>
                 <p class="text-center text-xl py-4">$50.000</p>
-                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
+                <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="mochilaAgata.html">Ver producto</a>
             </article>
         </div>
         <a class="inline-block w-90 md:w-110 p-3 text-center bg-black text-white mt-7" href="productos.html">Ver más productos</a>
