--- a/cuenta.html
+++ b/cuenta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Crudo Style Clothes</title>
+    <title>Cuenta - Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -23,9 +23,9 @@
     </header>
 
     <!--Portada-->
-    <div class="w-full h-40 bg-[url(img/contacto-bg-div.webp)] bg-cover bg-center">
+    <div class="w-full h-40 bg-[url(img/cuenta-bg-div.webp)] bg-cover bg-center">
         <div class="size-full  bg-[#00000050] flex justify-center items-center">
-            <h1 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Contacto</h1>
+            <h1 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Cuenta</h1>
         </div>
     </div>
 
@@ -35,53 +35,42 @@
         <a class="inline-flex justify-center items-center text-indigo-50 w-45 h-10 bg-indigo-600 hover:bg-indigo-700 transition-colors duration-150 ease-linear" href="faq.html">Ver sección</a>
     </div>
 
-    <!--Sección de medios de contacto-->
+    <!--Sección de formularios-->
     <section class="flex flex-wrap mt-10 w-[90%] justify-center gap-5 mx-auto">
-        <div class="w-full lg:w-[48%] flex flex-wrap gap-5">
 
-            <!--Tarjeta servicio al cliente-->
-            <article class="bg-indigo-50 w-full md:w-[48%] lg:w-full shadow-md shadow-gray-400 p-4">
-                    <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Servicio al cliente</h2>
-                    <p class="mt-4 text-center"><strong>Teléfono:</strong> <a href="tel:+54-383-4977878">+54-383-4977878</a></p>
-                    <p class="mt-2 text-center"><strong>Email: </strong><a href="http://contacto@crudo.com">contacto@crudo.com</a></p>
-                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.facebook.com">
-                        <img class="size-5 inline-block" src="img/icons/icon-facebook-dark.png" alt="ícono facebook">
-                        <span class="ml-2">Síguenos en Facebook</span>
-                    </a>
-                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.instagram.com">
-                        <img class="size-5 inline-block" src="img/icons/icon-instagram-dark.png" alt="ícono instagram">
-                        <span class="ml-2">Síguenos en Instagram</span>
-                    </a>
-                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.x.com">
-                        <img class="size-5 inline-block" src="img/icons/icon-x-dark.png" alt="ícono x">
-                        <span class="ml-2">Síguenos en X</span>
-                    </a>
-            </article>
-
-            <!--Tarjeta distribuidores-->
-            <article class="bg-indigo-50 w-full md:w-[48%] lg:w-full shadow-md shadow-gray-400 p-4" id="distribuidores">
-                    <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Distribuidores</h2>
-                    <p class="mt-2 text-center"><strong>Catamarca:</strong> Presidente castillo 1755</p>
-                    <p class="mt-2 text-center"><strong>Córdoba:</strong> Miguel Calixto del Corro 1057</p>
-                    <p class="mt-2 text-center"><strong>La Rioja:</strong> Av. Monseñor e. Angelelli 980</p>
-                    <p class="mt-2 text-center"><strong>Buenos Aires:</strong> Av. Tte. Gral. Donato Álvarez 407</p>
-            </article>
-        </div>
-
-        <!--Artículo de formulario-->
+        <!--Artículo crear cuenta-->
         <article class="bg-indigo-50 w-full lg:w-[48%] shadow-md shadow-gray-400 p-4">
-                <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Contáctanos</h2>
-                <form action="formularioEnviado.html">
-                    <label class="block w-full mt-4 font-semibold" for="nombre">Nombre</label>
-                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="text" name="nombre" id="nombre" placeholder="Ej: Samuel Jordan" required>
-                    <label class="block w-full mt-4 font-semibold" for="email">Email</label>
-                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="email" name="email" placeholder="email@ejemplo.com" required>
-                    <label class="block w-full mt-4 font-semibold" for="telefono">Telefono <small>(opcional)</small></label>
-                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="tel" name="telefono" id="telefono" placeholder="+54-123-4567890">
-                    <label class="block w-full mt-4 font-semibold" for="mensaje">Mensaje <small>(opcional)</small></label>
-                    <textarea class="block w-full h-20 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" name="mensaje" id="mensaje" placeholder="Mensaje..."></textarea>
-                    <input class="w-40 h-10 mt-4 mx-auto block justify-center items-center text-2xl text-indigo-50 bg-indigo-600 cursor-pointer hover:border-indigo-700 hover:bg-indigo-700" type="submit" value="Enviar">
-                </form>
+            <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Crear cuenta</h2>
+            <form action="correoEnviado.html">
+                <label class="block w-full mt-4 font-semibold" for="nombre">Nombre</label>
+                <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="text" name="nombre" id="nombre" placeholder="Ej: Samuel Jordan" required>
+                <label class="block w-full mt-4 font-semibold" for="email">Email</label>
+                <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="email" name="email" placeholder="email@ejemplo.com" required>
+                <label class="block w-full mt-4 font-semibold" for="contrasena">Contraseña</label>
+                <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="password" name="contrasena" id="contrasena" placeholder="contraseñaEjemplo">
+                <label class="block w-full mt-4 font-semibold" for="contrasenaRepetida">Confirmar contraseña</label>
+                <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="password" name="contrasenaRepetida" id="contrasenaRepetida" placeholder="contraseñaEjemplo">
+                <input class="w-40 h-10 mt-4 mx-auto block justify-center items-center text-2xl text-indigo-50 bg-indigo-600 cursor-pointer hover:border-indigo-700 hover:bg-indigo-700" type="submit" value="Crear cuenta">
+            </form>
+        </article>
+
+        <!--Artículo de ingreso-->
+        <article class="bg-indigo-50 w-full lg:w-[48%] shadow-md shadow-gray-400 p-4">
+            <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Ingresar</h2>
+            <form action="error.html">
+                <label class="block w-full mt-4 font-semibold" for="email">Email</label>
+                <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="email" name="email" placeholder="email@ejemplo.com" required>
+                <label class="block w-full mt-4 font-semibold" for="telefono">Contraseña</label>
+                <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="password" name="telefono" id="telefono" placeholder="contraseñaEjemplo">
+                <div class="mt-2 flex flex-wrap justify-between text-sm">
+                    <label class="flex gap-1 items-center justify-center" for="recordar">
+                        <input type="checkbox" name="recordar" id="recordar">
+                        Recordar contraseña
+                    </label>
+                    <a class="hover:text-indigo-500" href="#">¿Olvidaste tu contraseña?</a>
+                </div>
+                <input class="w-40 h-10 mt-4 mx-auto block justify-center items-center text-2xl text-indigo-50 bg-indigo-600 cursor-pointer hover:border-indigo-700 hover:bg-indigo-700" type="submit" value="Ingresar">
+            </form>
         </article>
     </section>
 
