--- a/nosotros.html
+++ b/nosotros.html
@@ -18,8 +18,7 @@
             <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="productos.html">Productos</a>
             <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="contacto.html">Contacto</a>
             <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="nosotros.html">Nosotros</a>
-            <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="login.html">Login</a>
-            <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="signup.html">Sign Up</a>
+            <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="cuenta.html">Cuenta</a>
         </nav>
     </header>
 
